--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "commission_tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "forever -c \"nodemon --exitcrash -L\" app.js"
+    "dev": "forever -c \"nodemon --exitcrash -L\" index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +14,19 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "celebrate": "^10.0.1",
+    "connect-mongo": "^3.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "method-override": "^3.0.0",
-    "mongoose": "^5.5.15"
+    "mongoose": "^5.5.15",
+    "mongoose-bcrypt": "^1.6.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
